Se agrega funcionalidad en pagina principal

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,12 @@ ul {
     font-size: 22px;
     color: #fff;
     margin-bottom: 0; }
+  .banner-prof .col-lg-4:nth-child(1) .single-pricing .pricing-icon:after {
+    background: #fca6a6; }
+  .banner-prof .col-lg-4:nth-child(2) .single-pricing .pricing-icon:after {
+    background: #71beb4; }
+  .banner-prof .col-lg-4:nth-child(3) .single-pricing .pricing-icon:after {
+    background: #ed92dd; }
 
 .banner-prof-icon {
   color: #fff;
@@ -3037,15 +3043,27 @@ h6 {
       font-size: 14px;
       color: #7f7f7f;
       margin-bottom: 11px; }
+  .single-pricing .single-pricing-content p {
+    font-size: 14px;
+    color: #7f7f7f;
+    margin-bottom: 11px; }
   .single-pricing .single-pricing-content a {
     font-size: 14px;
     color: #1d1d1d;
     border-bottom: 2px solid #edf1f6;
     font-weight: 600;
     padding-bottom: 5px; }
-    .single-pricing .single-pricing-content a:hover {
-      border-bottom: 2px solid #fd1c4a;
-      transition: all 300ms linear 0s; }
+  .single-pricing .single-pricing-content a:hover {
+    border-bottom: 2px solid #fd1c4a;
+    transition: all 300ms linear 0s; }
+  .single-pricing .col-lg-3:nth-child(1) .pricing-icon:after {
+        background: #fca6a6; }
+  .single-pricing .col-lg-3:nth-child(2) .pricing-icon:after {
+    background: #71beb4; }
+  .single-pricing .col-lg-3:nth-child(3) .pricing-icon:after {
+    background: #ed92dd; }
+  .single-pricing .col-lg-3:nth-child(4) .pricing-icon:after {
+    background: #97d0ee; }
 
 /* End pricing Area css
 ============================================================================================ */
